[package]
name = "SUB2"
version = "0.6.0"
edition = "2024"
authors = ["username000101 cxx.username000101@gmail.com"]
license = "BSD-3-Clause"
description = "Telegram userbot powered by Rust and tdjson"
repository = "https://github.com/username000101/SUB2"
keywords = ["telegram", "userbot"]

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.5.0"
mrpc-fixed = "0.0.8"
once_cell = "1.21.3"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sys-locale = "0.3.2"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

